tests/requests/invalid/014.py
from gunicorn.http.errors import LengthRequired

request = LengthRequired
